[gd_scene load_steps=9 format=3 uid="uid://cd6yxpjswtrg"]

[ext_resource type="Script" uid="uid://eo23cfvy5khp" path="res://Scripts/Game.gd" id="1_iukft"]
[ext_resource type="Script" uid="uid://bsgxb4hqlcg3t" path="res://Scripts/Player.gd" id="2_j5yw3"]
[ext_resource type="Texture2D" uid="uid://bssmpc0abcfjb" path="res://Assets/tomato.png" id="3_j5yw3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iukft"]
size = Vector2(93, 9)

[sub_resource type="Animation" id="Animation_j5yw3"]
resource_name = "throw"
length = 2.39
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.10000001, 0.13333334, 0.16666667, 0.20000002, 0.23333335, 0.26666668, 0.3, 0.33333334, 0.36666667, 0.40000004, 0.43333337, 0.4666667, 0.5, 0.53333336, 0.5666667, 0.6, 0.6333334, 0.6666667, 0.70000005, 0.73333335, 0.7666667, 0.8000001, 0.8333334, 0.86666673, 0.90000004, 0.9333334, 0.9666667, 1, 1.0333334, 1.0666667, 1.1, 1.1333334, 1.1666667, 1.2, 1.2333333, 1.2666668, 1.3000001, 1.3333334, 1.3666668, 1.4000001, 1.4333334, 1.4666667, 1.5000001, 1.5333334, 1.5666667, 1.6000001, 1.6333334, 1.6666667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.67, 2.36),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(576, 324), Vector2(576, 925.99994)]
}

[sub_resource type="Animation" id="Animation_kldst"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(576, 324)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b2bpf"]
_data = {
&"RESET": SubResource("Animation_kldst"),
&"throw": SubResource("Animation_j5yw3")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gl6un"]
size = Vector2(1169, 103)

[node name="Main" type="Node2D"]
script = ExtResource("1_iukft")

[node name="Player" type="Node2D" parent="."]
position = Vector2(0, 608)
script = ExtResource("2_j5yw3")

[node name="ColorRect" type="ColorRect" parent="Player"]
offset_top = 27.0
offset_right = 112.0
offset_bottom = 40.0
color = Color(0.40062952, 0.21941093, 9.62615e-08, 1)

[node name="ColorRect2" type="ColorRect" parent="Player"]
offset_top = -1.0
offset_right = 14.0
offset_bottom = 40.0
color = Color(0.40062952, 0.21941093, 9.62615e-08, 1)

[node name="ColorRect3" type="ColorRect" parent="Player"]
offset_left = 98.0
offset_top = -1.0
offset_right = 112.0
offset_bottom = 40.0
color = Color(0.40062952, 0.21941093, 9.62615e-08, 1)

[node name="Player" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Player"]
position = Vector2(56.5, 31.5)
shape = SubResource("RectangleShape2D_iukft")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Score" type="Label" parent="UI"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 36
text = "SCORE: 0"

[node name="Powerup" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_top = 84.0
offset_right = 1152.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 36
text = "BONUS POINTS!"
horizontal_alignment = 1

[node name="Lives" type="Label" parent="UI"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 23.0
theme_override_font_sizes/font_size = 36
text = "LIVES: 3"
horizontal_alignment = 2

[node name="GameOverScreen" type="Control" parent="UI"]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="GameOver" type="Label" parent="UI/GameOverScreen"]
layout_mode = 0
offset_left = 258.0
offset_top = 219.0
offset_right = 931.0
offset_bottom = 269.0
theme_override_font_sizes/font_size = 36
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen"]
layout_mode = 0
offset_left = 258.0
offset_top = 372.0
offset_right = 931.0
offset_bottom = 568.0

[node name="Menu" type="Button" parent="UI/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = " EXIT TO MAIN MENU "

[node name="Quit" type="Button" parent="UI/GameOverScreen/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "QUIT GAME"

[node name="tomato" type="Sprite2D" parent="UI"]
visible = false
position = Vector2(576, 324)
scale = Vector2(5.76, 3.2400002)
texture = ExtResource("3_j5yw3")
hframes = 5
vframes = 12

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/tomato"]
libraries = {
&"": SubResource("AnimationLibrary_b2bpf")
}
speed_scale = 0.8

[node name="Drops" type="Node2D" parent="."]
position = Vector2(0, -87)

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
ignore_time_scale = true

[node name="PowerupSpawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
ignore_time_scale = true

[node name="Death" type="Area2D" parent="."]
position = Vector2(0, 25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death"]
position = Vector2(584.5, 695.5)
shape = SubResource("RectangleShape2D_gl6un")

[node name="HidePowerup" type="Timer" parent="."]
wait_time = 1.2

[connection signal="pressed" from="UI/GameOverScreen/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="UI/GameOverScreen/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="UI/tomato/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="PowerupSpawnTimer" to="." method="_on_powerup_spawn_timer_timeout"]
[connection signal="timeout" from="HidePowerup" to="." method="_on_hide_powerup_timeout"]
